# bsm-foundation

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEEDBACK_LOG.md  FREEZE.md  LICENSE  Makefile  PUBLISHING.md  README.md  aliasing_factor_results.json  composition_stress_results.json  crossdomain_results.json  extraction_robustness_results.json  falsification_results.json  multicompiler_results.json  projection_results.json  proofwriter_results.json  pyproject.toml  report.json  report.md  seed10_results.json  summary.md
bsm/: EXPERIMENTS.md  MANIFESTO.md  README.md  __init__.py  _version.py
configs/: bsm-2048.json  bsm-4096.json
demo/: index.html
docs/: ARCHITETTURA.md  BENCHMARK.md  BLMF.md  CLI.md  FORMALISM.md  OPERAZIONI.md  ROADMAP.md  RUNTIME.md  SDK.md  TRAINING.md  abm2_roadmap.md  algebraic_report.md  applicability_pilot_report.md  calculus_validation_report.md  crossdomain_report.md  falsification_report.md  hotpotqa_report.md  hybrid_report.md  industrial_pilot_report.md  law8_report.md  level_b_report.md  memory_calculus.md  multicompiler_report.md  multihop_report.md  openrouter_pilot_report.md  paper.md  phase1b_report.md  preprint_draft.md  theory_and_laws.md  vsa_report.md
examples/: algebraic_demo.py  aliasing_factor_bench.py  bench_improved.py  capacity_contract.py  compiler_bench.py  composition_phase_map.py  crossdomain_bench.py  depth_scaling_bench.py  extraction_robustness.py  falsification_suite.py  hotpotqa_eval.py  industrial_pilot.py  llm_benchmark.py  make_figures.py  minimality_bench.py  multicompiler_bench.py  multihop_demo.py  proofwriter_eval.py  quickstart.py  rag_demo.py  reasoning_demo.py  scale_bench.py  seed_robustness.py  synthetic_algebra_bench.py  vsa_experiment.py
export/: bsm.go
format/: BLMF_SPEC.md
local-llm-server/: server.py
reference/: __init__.py  abm.py  cli.py  inspector.py  test_abm.py
results/: capacity_contract_results.json  compiler_bench_results.json  composition_phase_results.json  conjecture7_results.json  depth_scaling_results.json  hotpotqa_results.json  independence_results.json  industrial_pilot_results.json  llm_benchmark_results.json  minimality_results.json  pilot_results.json  scale_bench_results.json  seed_robustness_results.json  synthetic_bench_results.json
runtime/: go.mod
site/: index.html  outreach.md  video_script.md
testdata/: tiny_corpus.txt
training/: pyproject.toml
training/bsm/: __init__.py  data.py  export.py  model.py  model_ff.py  model_fp.py  model_lin.py  model_vf.py  trainer.py
training/configs/: tinystories_fast.yaml  tinystories_quality.yaml
training/scripts/: analyze_tree_head.py  bench_tree_accuracy.py  build_tree_head.py  eval_improved.py  eval_tree_head.py  evaluate_quality.sh  export_blmf.py  export_blmf_with_tree.py  generate_samples.py  prepare_tinystories.py  train.py  train_bsm.py  train_tinystories.py  train_tokenizer_tinystories.py  train_tree_head.py  train_tree_on_model.py  verify_embedding_parity.py  verify_tokenizer_parity.py  watch_quality.sh
training/tests/: test_binary_embedding.py  test_binary_layers.py  test_data.py  test_export.py  test_tokenizer.py  test_trainer.py
vercel-demo/: index.html  knowledge.html  (+2 more)
(+112 files in other folders)
