[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "abm-runtime"
version = "1.0.1"
description = "ABM — deterministic algebraic memory runtime for compiled symbolic knowledge, with predictive Memory Contracts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "kiatto"},
]
keywords = ["memory", "associative", "vsa", "hyperdimensional",
            "knowledge", "agent-memory", "symbolic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.scripts]
abm = "abm.cli:main"

[project.urls]
Homepage = "https://github.com/Kiatto/bsm-foundation"
Source = "https://github.com/Kiatto/bsm-foundation"

[tool.setuptools]
package-dir = {"abm" = "reference"}
packages = ["abm"]

[tool.pytest.ini_options]
testpaths = ["reference", "bsm/tests"]
python_files = ["test_*.py"]
