[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blm"
version = "0.1.0"
description = "Binary Language Model — training framework"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "flake8>=7.0.0",
    "black>=24.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["blm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
